# iced_lens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  ICON_LICENSE.md  LICENSE  NEXT_ITERATION_PLAN.md  README.md  SECURITY.md  TESTING_LOADING_INDICATOR.md  THIRD_PARTY_LICENSES.md  TODO.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
.specify/memory/: DEVELOPMENT.md  constitution.md
.specify/templates/: plan-template.md
.specify/work-in-progress/: dynamic-padding-editor.md
assets/branding/: README.md  iced_lens.icns
assets/i18n/: de.ftl  en-US.ftl  es.ftl  fr.ftl  it.ftl
assets/icons/: README.md
benches/: image_loading.rs  media_navigation.rs
docs/: AI_DEBLURRING_MODELS.md  FLATHUB_PUBLICATION.md  USER_GUIDE.md  architecture-review-diagnostics-enrichment.md  architecture.md  brainstorming-session-results.md  brief.md  prd.md
docs/architecture/: checklist-results-report.md  coding-standards.md  component-architecture.md  data-models.md  detailed-design-specifications.md  enhancement-scope-and-integration-strategy.md  index.md  infrastructure-and-deployment-integration.md  introduction.md  next-steps.md  security-integration.md  source-tree.md  tech-stack.md  testing-strategy.md
docs/prd/: checklist-results-report.md  epic-1-diagnostics-core-data-collection.md  epic-2-anonymization-export-system.md  epic-3-ui-integration.md  epic-4-diagnostics-collection-completeness.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  report-media-metadata-gap.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/gates/: 2.3-json-schema.yml  (+31 more)
docs/reports/: architecture-review-diagnostics-navigation.md  epic4-coordination-plan.md
docs/stories/: bug-3.7-light-collection-not-draining.md  story-1.1-module-structure-circular-buffer.md  story-1.10-ai-operation-timing.md  story-1.11-instrumentation-integration-tests.md  story-1.12-notification-diagnostic-types.md  story-1.2-system-resource-metrics.md  story-1.3-user-action-capture.md  story-1.4-analysis.md  story-1.4-app-state-capture.md  story-1.5-warning-error-capture.md  story-1.6-basic-json-export.md  story-1.7-state-operation-instrumentation.md  story-1.8-video-player-instrumentation.md  story-1.9-media-loading-lifecycle.md  story-2.1-path-anonymization.md  story-2.2-network-identity-anonymization.md  story-2.3-json-schema.md  story-2.4-file-export.md  story-2.5-clipboard-export.md  story-3.1-diagnostics-screen-layout.md  story-3.2-collection-status-display.md  story-3.3-collection-toggle.md  story-3.4-export-buttons.md  story-3.5-help-content.md  story-3.6-enrich-report-data.md  story-3.8-enrich-diagnostic-data.md  story-4.0-fix-collection-point-violations.md  story-4.1-navigation-filter-events.md  story-4.2-navigation-context.md  story-4.3a-editor-actions-instrumentation.md  story-4.3b-video-audio-actions-instrumentation.md  story-4.3c-view-controls-instrumentation.md  story-4.4-missing-state-events.md  story-4.5-final-conformance-audit.md
examples/: benchmark_detection.rs  ffmpeg_test.rs  media_type_detection.rs  test_animated_formats.rs  video_metadata_test.rs  video_thumbnail_test.rs
flatpak/: cargo-sources.json  page.codeberg.Bawycle.IcedLens.desktop  page.codeberg.Bawycle.IcedLens.metainfo.xml  page.codeberg.Bawycle.IcedLens.yml
scripts/: add_test_delay.sh  build-appimage.sh  build-flatpak.sh  build-windows-installer.iss  build-windows-installer.ps1  convert-icons-to-png.sh  generate-icons.sh  generate-test-videos.sh  remove_test_delay.sh
specs/001-initial-image-viewer/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-editor-refactor/: plan.md
src/: app.rs  directory_scanner.rs  error.rs  icon.rs  image_navigation.rs  lib.rs  main.rs  test_utils.rs
src/app/: handlers.rs  message.rs  mod.rs  paths.rs  persisted_state.rs  persistence.rs  screen.rs  subscription.rs  update.rs  view.rs
src/application/: mod.rs
src/config/: defaults.rs  mod.rs
src/diagnostics/: anonymizer.rs  buffer.rs  collector.rs  events.rs  export.rs  mod.rs  report.rs  resource_collector.rs  sanitizer.rs
src/domain/: mod.rs
src/i18n/: fluent.rs  mod.rs
src/image_handler/: mod.rs  transform.rs
src/infrastructure/: mod.rs
src/media/: deblur.rs  filter.rs  frame_export.rs  image.rs  image_transform.rs  metadata.rs  metadata_operations.rs  metadata_writer.rs  mod.rs  navigator.rs  prefetch.rs  skip_attempts.rs  upscale.rs  video.rs  xmp.rs
src/ui/: about.rs  action_icons.rs  design_tokens.rs  diagnostics_screen.rs  help.rs  icons.rs  metadata_panel.rs  mod.rs  navbar.rs  settings.rs  theme.rs  theming.rs  viewer.rs
src/video_player/: audio.rs  audio_output.rs  decoder.rs  frame_cache.rs  frame_cache_size.rs  frame_history_size.rs  mod.rs  normalization.rs  playback_speed.rs  seek_step.rs  state.rs  subscription.rs  sync.rs  time_units.rs  volume.rs  webp_decoder.rs
src/widgets/: wheel_blocking_scrollable.rs
tests/: integration.rs  style_integration.rs  video_integration.rs
(+140 files in other folders)
